--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/blob": "^2.0.1",
     "dotenv": "^17.2.3",
     "next": "16.1.3",
     "openai": "^6.16.0",
